# clawguild

./: .env.example  .gitignore  .prettierignore  Cargo.toml  README.md  justfile  lerna.json  lint-staged.config.cjs  package.json  pnpm-lock.yaml
.claude-flow/: daemon-state.json
.github/workflows/: docker-build-dev.yml  docker-build-prod.yml  format.yml  runtime-init.yml
api-server/: Cargo.toml
api-server/src/: main.rs
api-server/src/api/: errors.rs  handlers.rs  middleware.rs  mod.rs  routes.rs
api-server/src/api/handlers/: agents.rs  channels.rs  deployments.rs  mod.rs  tasks.rs  teams.rs  validation.rs
api-server/src/api/services/: agents.rs  deployments.rs  mod.rs  tasks.rs  teams.rs
claws/nanoclaw-runtime/: Cargo.toml
claws/nanoclaw-runtime/scripts/: init.sh
claws/nanoclaw-runtime/src/: channel_adapters.rs  lib.rs
claws/openclaw-runtime/: Cargo.toml
claws/openclaw-runtime/scripts/: init.sh
claws/openclaw-runtime/src/: channel_adapters.rs  lib.rs
claws/picoclaw-runtime/: Cargo.toml
claws/picoclaw-runtime/scripts/: init.sh
claws/picoclaw-runtime/src/: channel_adapters.rs  lib.rs
claws/runtime-core/: Cargo.toml
claws/runtime-core/src/: lib.rs
claws/zeroclaw-runtime/: Cargo.toml
claws/zeroclaw-runtime/scripts/: init.sh
claws/zeroclaw-runtime/src/: lib.rs
dashboard/: .prettierignore  Dockerfile  Dockerfile.prod  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: AgentCard.tsx  DeploymentForm.tsx  MultiDeploymentForm.tsx  ServerManagement.tsx  StatusIndicator.tsx  TaskManager.tsx  TeamAssignmentForm.tsx  TeamForm.tsx  TeamRoster.tsx  VpsLogsViewer.tsx
dashboard/src/components/dashboard/: AgentDetailPanel.tsx  AgentListView.tsx  CommandToolbar.tsx  CommandWorkspace.tsx  OrchestrationBuilder.tsx  QuickSpawnPanel.tsx  TemplateChips.tsx  telegram.ts  types.ts
dashboard/src/components/ui/: button.tsx  select.tsx  tabs.tsx
dashboard/src/lib/: api.ts
docker/: Dockerfile.api-server  Dockerfile.openclaw  docker-compose.yml
docs/: runtime-compat.md
engine/: Cargo.toml
engine/src/: config.rs  lib.rs  models.rs
engine/src/adapters/: aws.rs  flyio.rs  mod.rs  railway.rs  trait_def.rs
engine/src/coordinator/: discord.rs  master.rs  mod.rs  slave.rs
engine/src/deployment/: manager.rs  openclaw.rs
engine/src/runtime/: mod.rs
engine/src/storage/: database.rs  mod.rs  repositories.rs
infra/migrations/: 001_init.sql
infra/scripts/: migrate.sh
orchestrator/: Cargo.toml
orchestrator/src/: config.rs  main.rs  models.rs
orchestrator/src/adapters/: aws.rs  mod.rs  trait_def.rs
orchestrator/src/api/: handlers.rs  mod.rs  routes.rs
orchestrator/src/coordinator/: discord.rs  master.rs  mod.rs  slave.rs
orchestrator/src/deployment/: manager.rs  mod.rs  openclaw.rs
orchestrator/src/migrations/: 001_initial.sql
orchestrator/src/storage/: database.rs  repositories.rs
scripts/: setup.sh
scripts/ci/: test-runtime-init.sh
scripts/ci/runtime-init-stubs/: setup-stubs.sh
skills/rust-skills/: CLAUDE.md
skills/vercel-composition-patterns/: AGENTS.md
skills/vercel-react-best-practices/: AGENTS.md
templates/: openclaw-init.sh  openclaw-vps-setup.sh
