[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
surrealdb.workspace = true
chrono.workspace = true
uuid.workspace = true
serenity.workspace = true
async-trait.workspace = true
tracing.workspace = true
